--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dompurify": "^3.0.9",
     "framer-motion": "^12.15.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.511.0",
     "mapbox-gl": "^3.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
